# equity-valuation-engine

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
src/application/: __init__.py
src/application/metrics_loader/: metrics_loader.py  stock_nulls_checker.py
src/application/valuations/: utils.py
src/calculations/: README.md  __init__.py  common.py  dfc_formulas.py  metrics_formulas.py
src/cli/: json_formatter.py  main.py
src/cli/presenters/: dcf_presenter.py  pe_presenter.py  roe_presenter.py  stock_metrics_presenter.py  summary_presenter.py  utils.py
src/config/: __init__.py  config_loader.py
src/config/validators/: dcf.yaml
src/config/valuations/: dcf.yaml  pe.yaml  roe.yaml  scenarios.yaml
src/domain/: __init__.py
src/domain/core/: __init__.py  build_diagnostic.py  missing.py  missing_registry.py
src/domain/metrics/: __init__.py  history.py  stock.py  valuation.py
src/domain/valuation/: base.py  policies.py  valuation_manager.py
src/infrastructure/: __init__.py
src/infrastructure/currency/: __init__.py  currency_service.py
src/infrastructure/mappers/: base_mapper.py  stock_metrics_mapper.py
tests/: test_bug_a_dcf_validator.py  test_bug_b_roe_buyback.py  test_bug_c_roe_cap.py  test_bug_d_g_growth_signals.py  test_dcf_valuation.py  test_market_data_validation.py  test_missing_registry.py  test_phase2.py  test_refactor.py  test_roe_valuation.py  test_stock_derived_fields.py  test_yfinance_eps_field.py
tests/unit/: fixtures.py
(+35 files in other folders)
